--- a/TODO.txt
+++ b/TODO.txt
@@ -7,10 +7,15 @@ NOTE don't hide executable code between functions
 NOTE consider using main() functions
 NOTE consider using namespaces: _colors.print() _colors::print()
 
-TODO conventions
-- GLOBAL_SETTING_VARIABLE
-- GLOBAL_ASSOC
-- globalVariableToUseByUser
-- module-public-function-name
-- alias function-name module-function-name
-- _module_privateFunctionName
+-- conventions --
+TODO GLOBAL_SETTING_VARIABLE
+TODO GLOBAL_ASSOC
+TODO globalVariableToUseByUser
+TODO module-public-function-name
+TODO alias function-name module-function-name
+TODO _module_privateFunctionName
+TODO file structure: global variables, private functions, public functions, executable code incl. defining aliases, initializing and exporting globals
+TODO all user data in one directory, src/profile? src/user?
+TODO -eq -neq prefer putting constant values to compare as second parameter - less error-prone when changing later -eq to -has or -like
+TODO directories w/o trail slash? - better look, easier variable placing, compatible with dirname, readlink, dis: only not aesthetic when dir=root but this almost does not happen
+TODO do not export functions - if need to use a function inside executed script, use 'require' in that script (therefore require must be exported)
